# GL_vs_VK

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: FindGLFW.cmake  FindGLM.cmake  FindVulkan.cmake
include/base/: ArgumentParser.h  Clock.h  ContainerUtils.h  File.h  Random.h  ScopedTimer.h  String.h
include/base/gl/: Buffer.h  Program.h  Shader.h  Uniform.h  VertexArray.h  VertexAttrib.h  VertexBuffer.h  Window.h
include/base/vkx/: Application.h  DeviceInfo.h  MemoryManager.h  QueueManager.h  ShaderModule.h  Utils.h  Window.h
include/framework/: BenchmarkableTest.h  GLTest.h  TestInterface.h  TestRunner.h  VKTest.h
include/tests/common/: Ball.h  CubeVerticesGenerator.h  Heightmap.h  QTNode.h  RenderObject.h  SphereVerticesGenerator.h  TerrainLoD.h
include/tests/test1/: BallsSceneTests.h  BaseBallsSceneTest.h  BaseSimpleBallsSceneTest.h  SimpleBallsSceneTestIncludes.h
include/tests/test1/gl/: MultithreadedBallsSceneTest.h  SimpleBallsSceneTest.h
include/tests/test1/vk/: MultithreadedBallsSceneTest.h  SimpleBallsSceneTest.h
include/tests/test2/: BaseTerrainSceneTest.h  TerrainSceneTests.h
include/tests/test2/gl/: TerrainSceneTest.h
include/tests/test2/vk/: MultithreadedTerrainSceneTest.h  TerrainSceneTest.h
include/tests/test3/: BaseShadowMappingSceneTest.h  ShadowMappingSceneTests.h
include/tests/test3/gl/: ShadowMappingSceneTest.h
include/tests/test3/vk/: MultithreadedShadowMappingSceneTest.h  ShadowMappingSceneTest.h
include/tests/test4/: BaseInitializationTest.h  InitializationTests.h
include/tests/test4/gl/: InitializationTest.h
include/tests/test4/vk/: InitializationTest.h
project/: CMakeLists.txt
project/msvc/: GL_vs_VK.sln
project/msvc/GL_vs_VK/: GL_vs_VK.vcxproj  GL_vs_VK.vcxproj.filters
scripts/linux/: install_dependencies.sh
scripts/linux/dependencies/: GLEW.sh  GLFW.sh  GLM.sh
scripts/windows/: install_msvc_dependencies.bat
src/: main.cpp
src/base/: ArgumentParser.cpp  Clock.cpp  ContainerUtils.cpp  File.cpp  Random.cpp  ScopedTimer.cpp  String.cpp
src/base/gl/: Buffer.cpp  Program.cpp  Shader.cpp  Uniform.cpp  VertexArray.cpp  VertexAttrib.cpp  VertexBuffer.cpp  Window.cpp
src/base/vkx/: Application.cpp  DeviceInfo.cpp  MemoryManager.cpp  QueueManager.cpp  ShaderModule.cpp  Utils.cpp  Window.cpp
src/framework/: BenchmarkableTest.cpp  GLTest.cpp  TestRunner.cpp  VKTest.cpp  main.cpp
src/tests/common/: CubeVerticesGenerator.cpp  Heightmap.cpp  SphereVerticesGenerator.cpp  TerrainLoD.cpp
src/tests/test1/: BaseBallsSceneTest.cpp  BaseSimpleBallsSceneTest.cpp
src/tests/test1/gl/: MultithreadedBallsSceneTest.cpp  SimpleBallsSceneTest.cpp
src/tests/test1/vk/: MultithreadedBallsSceneTest.cpp  SimpleBallsSceneTest.cpp
src/tests/test2/: BaseTerrainSceneTest.cpp
src/tests/test2/gl/: TerrainSceneTest.cpp
src/tests/test2/vk/: MultithreadedTerrainSceneTest.cpp  TerrainSceneTest.cpp
src/tests/test3/: BaseShadowMappingSceneTest.cpp
src/tests/test3/gl/: ShadowMappingSceneTest.cpp
src/tests/test3/vk/: MultithreadedShadowMappingSceneTest.cpp  ShadowMappingSceneTest.cpp
src/tests/test4/: BaseInitializationTest.cpp
src/tests/test4/gl/: InitializationTest.cpp
src/tests/test4/vk/: InitializationTest.cpp
